--- a/app/static/css/stat_tracker.css
+++ b/app/static/css/stat_tracker.css
@@ -2,16 +2,24 @@
 
 .back-btn{
     text-align: center;
-    padding: 5px 0;
     margin-bottom: 20px;
     font-size: 50;
     border-bottom: solid thick #3d3d3d;
-    padding: 10px 0;
+    padding: 20px 0;
     cursor: pointer;
 }
 
 .back-btn span {
     cursor: pointer;
+}
+
+.left-back-btn {
+    float: left;
+    width: 50%
+}
+.right-back-btn {
+    float: right;
+    width: 50%;
 }
 
 .selector {
@@ -57,6 +65,14 @@
     letter-spacing: -0px;
     border-top: thick solid #3D3D3D;
     padding: 30px 0px;
+}
+
+.delete-game {
+    height: 75px;
+    text-align: center;
+    background-color: #000000;
+    color: #000000;
+    font-size: 40px;
 }
 
 .display-score {
@@ -123,7 +139,9 @@
 #disabler {
     width:100%;
     height:100%;
-    position:fixed;
+    position:absolute;
+    top: 0;
+    left: 0;
     background-color:white;
     display: none;
     z-index: 1;
@@ -135,24 +153,24 @@
     opacity: 0.5;
 }
 
-.stats_row {
+.leaderboard-row {
     height: 50px;
     font-size: 40px;
     text-align: left;
 }
 .team {
     font-size: 70px;
-    line-height: 60px;
+    line-height: 65px;
     border-top: thick solid #3D3D3D;
     padding: 30px 10px;
 }
 
-.team-red {
+.team-red, .team-red > div {
     text-align:left;
     color: #924D4D;
 }
 
-.team-blue {
+.team-blue, .team-blue > div {
     text-align:right;
     color: #3C6EC9;
 }
@@ -197,6 +215,43 @@
     text-align: right;
     clear: both;
 }
+
+.player-header {
+    font-size: 50px;
+    border-bottom: thick solid #3D3D3D;
+    position: relative;
+    height: calc(180px +6px);
+    padding-left: 10px;
+    margin-top: -20px;
+}
+.player-header > .player-name {
+    text-align: left;
+    float: left;
+    position: absolute;
+    width: calc(100% - 190px);
+    bottom: 0;
+}
+.player-header > .player-photo {
+    float: right;
+    height: 180px;
+}
+
+.rank {
+    font-size: 30px;
+    text-align: left;
+    padding: 10px 10px;
+}
+
+.player-table {
+    font-size: 35px;
+}
+.player-table th {
+    text-align: left;
+}
+.player-table td {
+    text-align: right;
+}
+
 
 * {
     font-family: 'Roboto Condensed', sans-serif;
