--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,35 +1,11 @@
-<html>
-  <head>
-    <title>Foosball Stat Tracker</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/stat_tracker.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  </head>
+{% extends "content-page.html" %}
+{% block title %}Foosball Stat Tracker{% endblock %}
+
   
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <div id="home" class="row back-btn">
-            <span class="glyphicon glyphicon-home"></span>
-          </div>
-          
-          <div class="row title">
-            404 
-            <br>
-            Page not found
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-  
-  <script src="/static/js/jquery-2.1.1.min.js"></script>
-  <script src="/static/js/bootstrap.js"></script>
-  <script>
-    $('.back-btn').click( function () {
-      window.location.href = '/';
-    });
-  </script>
-  
-</html>
+{% block content %}
+  <div class="row title">
+    404 
+    <br>
+    Page not found
+  </div>
+{% endblock %}
