--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,33 +1,21 @@
-<html>
-  <head>
-    <title>Foosball Stat Tracker</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/stat_tracker.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  </head>
+{% extends "content-page.html" %}
+{% block title %}Foosball Stat Tracker{% endblock %}
+
+{% block content %}
+  <div class="row title">
+    Foosball<br>
+    <em>Stat Tracker</em>
+  </div>
   
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <div class="row title">
-            Foosball<br>
-            <em>Stat Tracker</em>
-          </div>
-          
-          <div id="new_game" class="row menu-item">
-            Enter new game
-          </div>
-          <div id="stats/index" class="row menu-item">
-            View Stats
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-  
-  <script src="/static/js/jquery-2.1.1.min.js"></script>
-  <script src="/static/js/bootstrap.js"></script>
+  <div id="new_game" class="row menu-item">
+    Enter new game
+  </div>
+  <div id="stats/index" class="row menu-item">
+    View Stats
+  </div>
+{% endblock %}
+
+{% block scripts %}
   <script>
     $('.menu-item').click( function () {
       var new_page = '/' + $(this).attr('id');
@@ -35,5 +23,4 @@
       window.location.href = new_page;
     });
   </script>
-  
-</html>
+{% endblock %}
