--- a/app/templates/stats/index.html
+++ b/app/templates/stats/index.html
@@ -1,37 +1,21 @@
-<html>
-  <head>
-    <title>Foosball Stat Tracker</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/stat_tracker.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  </head>
+{% extends "content-page.html" %}
+{% block title %}Foosball Stat Tracker{% endblock %}
+
+{% block content %}
+  <div class="row title">
+    Stats<br>
+    <em>{{ count }} games on record</em>
+  </div>
   
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4">          
-          <div class="row back-btn">
-            <span class="glyphicon glyphicon-home"></span>
-          </div>
-          
-          <div class="row title">
-            Stats<br>
-            <em>{{ count }} games on record</em>
-          </div>
-          
-          <div id="stats/leaderboard" class="row menu-item">
-            Leaderboard
-          </div>
-          <div id="stats/recent_games" class="row menu-item">
-            Recent games
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <div id="stats/leaderboard" class="row menu-item">
+    Leaderboard
+  </div>
+  <div id="stats/recent_games" class="row menu-item">
+    Recent games
+  </div>
+{% endblock %}
   
-  <script src="/static/js/jquery-2.1.1.min.js"></script>
-  <script src="/static/js/bootstrap.js"></script>
+{% block scripts %}
   <script>
     $('.back-btn').click( function () {
       window.location.href = '/';
@@ -42,5 +26,4 @@
       window.location.href = new_page;
     });
   </script>
-  
-</html>
+{% endblock %}
