--- a/app/templates/stats/leaderboard.html
+++ b/app/templates/stats/leaderboard.html
@@ -1,37 +1,21 @@
-<html>
-  <head>
-    <title>Stats main</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link rel="stylesheet" href="/static/css/stat_tracker.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  </head>
-  
-  <body>
-    <div class="container">
+{% extends "content-page.html" %}
 
-      <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <div class="row back-btn">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </div>
-          
-          {% for player in playerlist %}
-          <div class="stats_row">
-            #{{loop.index}}. {{player.nickname}}
-          </div>
-          {%endfor%}
-        </div>
-      </div>
+{% block content %}
+  {% for player in playerlist %}
+  <div id={{ player.id }} class="leaderboard-row">
+    #{{loop.index}}. {{player.nickname}}
+  </div>
+  {%endfor%}
+{% endblock %}
 
-    </div>
-  </body>
-  
-  <script src="/static/js/jquery-2.1.1.min.js"></script>
-  <script src="/static/js/bootstrap.js"></script>
+{% block scripts %}
   <script>
     $('.back-btn').click( function () {
       window.location.href = '/stats/index';
     });
+    
+    $('.leaderboard-row').click( function() {
+      window.location.href = '/view_player/' + this.id;
+    });
   </script>
-  
-</html>
+{% endblock %}
