--- a/app/templates/view_game.html
+++ b/app/templates/view_game.html
@@ -35,7 +35,7 @@
 {% block scripts %}
   <script>
     $('.player').click( function() {
-      window.location.href = '/view_player/' + this.id;
+      window.location.href = '/stat-tracker/view_player/' + this.id;
     });
     
     $('.timeago').timeago();
