--- a/app/templates/view_player.html
+++ b/app/templates/view_player.html
@@ -8,7 +8,7 @@
     {{ player.nickname }}
   </div>
   <div class="player-photo">
-    <img src="/static/img/{{player.id}}.jpg" width="180px">
+    <img src="/stat-tracker/static/img/{{player.id}}.jpg" width="180px">
   </div>
 </div>
 
