assorted changes made while hosting app

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,10 +7,10 @@
     <em>Stat Tracker</em>
   </div>
   
-  <div id="new_game" class="row menu-item">
+  <div id="/new_game" class="row menu-item">
     Enter new game
   </div>
-  <div id="stats/index" class="row menu-item">
+  <div id="/stats/index" class="row menu-item">
     View Stats
   </div>
 {% endblock %}
