--- a/app/templates/stats/index.html
+++ b/app/templates/stats/index.html
@@ -7,10 +7,10 @@
     <em>{{ count }} games on record</em>
   </div>
   
-  <div id="leaderboard" class="row menu-item">
+  <div id="/stats/leaderboard" class="row menu-item">
     Leaderboard
   </div>
-  <div id="recent_games" class="row menu-item">
+  <div id="/stats/recent_games" class="row menu-item">
     Recent games
   </div>
 {% endblock %}
