--- a/app/templates/stats/leaderboard.html
+++ b/app/templates/stats/leaderboard.html
@@ -11,7 +11,7 @@
 {% block scripts %}
   <script>
     $('.leaderboard-row').click( function() {
-      window.location.href = '/stat-tracker/view_player/' + this.id;
+      window.location.href = '/view_player/' + this.id;
     });
   </script>
 {% endblock %}
