--- a/app/templates/view_player.html
+++ b/app/templates/view_player.html
@@ -8,14 +8,14 @@
     {{ player.nickname }}
   </div>
   <div class="player-photo">
-    <img src="/stat-tracker/static/img/{{player.id}}.jpg" width="180px">
+    <img src="/static/img/{{player.id}}.jpg" width="180px">
   </div>
 </div>
 
 <table class="table table-striped player-table">
   <tr>
     <th>Rank</th>
-    <td>#{{ player.rank }}</td>
+    <td>{{ player.rank }}</td>
   </tr>
   <tr>
     <th>Score</th>
