--- a/app/static/css/stat_tracker.css
+++ b/app/static/css/stat_tracker.css
@@ -252,6 +252,12 @@
     text-align: right;
 }
 
+.score_chart {
+    width: 100%;
+    height: 300px;
+    padding: 0;
+}
+
 
 * {
     font-family: 'Roboto Condensed', sans-serif;
