--- a/app/templates/view_player.html
+++ b/app/templates/view_player.html
@@ -42,4 +42,47 @@
     <td>{{ player.goals_conceded }}</td>
   </tr>
 </table>
+
+<div id="chart_div" class="score_chart"></div>
+<br>
+</div>
+{% endblock %}
+
+{% block scripts %}
+  <script type='text/javascript' src='http://www.google.com/jsapi'></script>
+  <script>
+    var score_history = {{ player.score_history|tojson }};
+    
+    google.load('visualization', '1.1', {'packages':['corechart']});
+    google.setOnLoadCallback(drawChart);
+    
+    function drawChart() {
+        var data = new google.visualization.DataTable();
+        data.addColumn('number', 'Game Number');
+        data.addColumn('number', 'Score');
+        data.addColumn({type: 'string', role: 'tooltip'});
+        
+        for(i=0; i<score_history.length; i++){
+          data.addRow([i, 
+            score_history[i].score*1000 + 1000,
+            score_history[i].timestamp])
+        }
+
+        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+
+        var w = $('#chart_div').width();
+        console.log(w);
+
+        var options = {
+          legend: 'none',
+          width: w,
+          chartArea: {'width': '100%', 'height': '80%', 'left': 0},
+          explorer: {axis: 'horizontal'},
+          vAxis: {'title': 'Score', 'textPosition': 'in'},
+          hAxis: {'title': 'Game Number', 'format': '#'},
+        };
+
+        chart.draw(data, options);
+      }
+  </script>
 {% endblock %}
