--- a/app/templates/view_player.html
+++ b/app/templates/view_player.html
@@ -50,11 +50,13 @@
 
 {% block scripts %}
   <script type='text/javascript' src='http://www.google.com/jsapi'></script>
+  <script type='text/javascript' src='/static/js/date.js'></script>
   <script>
     var score_history = {{ player.score_history|tojson }};
     
     google.load('visualization', '1.1', {'packages':['corechart']});
     google.setOnLoadCallback(drawChart);
+    window.onresize = drawChart;
     
     function drawChart() {
         var data = new google.visualization.DataTable();
@@ -62,24 +64,29 @@
         data.addColumn('number', 'Score');
         data.addColumn({type: 'string', role: 'tooltip'});
         
+        var score, date, tooltip;
+        data.addRow([0, 1000, 'Initial\n1000']);
         for(i=0; i<score_history.length; i++){
-          data.addRow([i, 
-            score_history[i].score*1000 + 1000,
-            score_history[i].timestamp])
+          score = score_history[i].score*1000 + 1000;
+          date = Date.parse(score_history[i].timestamp).toString('dd/MM/yy');
+          tooltip = date.concat('\n', Math.round(score).toString());
+          data.addRow([i+1, 
+            score,
+            tooltip])
         }
 
         var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
 
         var w = $('#chart_div').width();
-        console.log(w);
 
         var options = {
           legend: 'none',
           width: w,
+          height: 0.7*w,
           chartArea: {'width': '100%', 'height': '80%', 'left': 0},
-          explorer: {axis: 'horizontal'},
           vAxis: {'title': 'Score', 'textPosition': 'in'},
           hAxis: {'title': 'Game Number', 'format': '#'},
+
         };
 
         chart.draw(data, options);
