--- a/app/templates/new_game.html
+++ b/app/templates/new_game.html
@@ -40,6 +40,9 @@
     <div id="predict-score">
       <div class="score score-left" id="predict-score-red"></div>
       <div class="score score-right" id="predict-score-blue"></div>
+      <div style="position:relative; top: -4px; z-index:-1;text-align: center;">
+          :
+      </div>
     </div>
   </div>
 
