--- a/app/templates/new_game.html
+++ b/app/templates/new_game.html
@@ -134,6 +134,7 @@
       if(current == clicked){
         item.removeClass(current);
         update_players();
+        predict();
         return;
       }
       
@@ -149,7 +150,7 @@
       predict();
     });
     
-    $(".score").click(function() {
+    $(".score .select-score").click(function() {
       var num = Number($(this).text().trim());
       num = num+1;
       if (num==11)
