--- a/app/templates/new_game.html
+++ b/app/templates/new_game.html
@@ -150,7 +150,7 @@
       predict();
     });
     
-    $(".score .select-score").click(function() {
+    $(".select-score .score").click(function() {
       var num = Number($(this).text().trim());
       num = num+1;
       if (num==11)
