--- a/app/templates/new_game.html
+++ b/app/templates/new_game.html
@@ -36,7 +36,8 @@
   </div>
 
   <div class="row" id="predict">
-    <div id="predict-adj"></div>
+    <div id="predict-adj-red" class="predict-adj team-red"></div>
+    <div id="predict-adj-blue" class="predict-adj team-blue"></div>
     <div id="predict-score">
       <div class="score score-left" id="predict-score-red"></div>
       <div class="score score-right" id="predict-score-blue"></div>
@@ -70,27 +71,28 @@
         if ( $(this).hasClass( "red" ) )
           reds.push( Number($(this).attr('id')) );
         if ( $(this).hasClass( "blue" ) )
-            blues.push( Number($(this).attr('id')) );
+          blues.push( Number($(this).attr('id')) );
       });
+      update_predictions();
     }
 
-    $("#predict").hide();
-    function predict() {
+    var predictions = {};
+
+    function update_predictions() {
       // we're liable to start several delays and then requests.
       // if we notice that the nonce has been increased then abort this req.
       predict_nonce += 1;
       var this_nonce = predict_nonce;
 
-      if (reds.length == 0 || blues.length == 0
-          || red_score == blue_score || red_score + blue_score == 0) {
-        $("#predict").hide();
+      predictions = {};
+      show_predictions();
+
+      if (reds.length == 0 || blues.length == 0) {
         return;
       }
 
       var payload = {"reds[]": reds,
-                     "blues[]": blues,
-                     "red_score": red_score,
-                     "blue_score": blue_score};
+                     "blues[]": blues};
 
       setTimeout(function() {
         if (predict_nonce != this_nonce)  return;
@@ -98,22 +100,58 @@
         $.post( "/predict", payload).done(function( data ) { 
           if (predict_nonce != this_nonce)  return;
           console.log(data);
-
-          data.adj_red  = Math.round(data.adj_red * 1000);
-          data.adj_blue = Math.round(data.adj_blue * 1000);
-          if (data.adj_red != -data.adj_blue)  return;
-
-          adj_class = (data.adj_red < 0 ? 'team-blue' : 'team-red');
-          adj_value = '+' + Math.abs(data.adj_red);
-
-          $("#predict-adj").text(adj_value);
-          $("#predict-adj").removeClass("team-red team-blue").addClass(adj_class);
-          $("#predict-score-red").text(Math.round(data.score_red * 10) / 10);
-          $("#predict-score-blue").text(Math.round(data.score_blue * 10) / 10);
-          $("#predict").show();
+          predictions = data;
+          show_predictions();
         });
-      }, 1000);
+      });
     }
+
+    function show_predicitons() {
+      var shown_something = false;
+
+      var score = predictions.score;
+      if (score !== undefined) {
+        $("#predict-score-red") .text(Math.round(score[0] * 10) / 10);
+        $("#predict-score-blue").text(Math.round(score[1] * 10) / 10);
+        shown_something = true;
+      }
+
+      var updates = predictions.updates;
+      var pred_red, pred_blue;
+      if (updates !== undefined) {
+        pred_red  = updates[10 + ":" + blue_score];  // if red won
+        pred_blue = updates[red_score + ":" + 10];   // if blue won
+      } else {
+        pred_red = pred_blue = null;
+      }
+
+      // if _ won, how would their score change
+      if (pred_red !== undefined) {
+        var adj_red  = Math.round(pred_red[0] * 1000);
+        if (adj_red >= 0)   adj_red = "+" + adj_red;
+        $("#predict-adj-red").text(adj_red);
+        shown_something = true;
+      } else {
+        $("#predict-adj-red").text("");
+      }
+
+      if (pblue_blue !== undefined) {
+        var adj_blue = Math.round(pblue_blue[0] * 1000);
+        if (adj_blue >= 0)  adj_blue = "+" + adj_blue;
+        $("#predict-adj-blue").text(adj_blue);
+        shown_something = true;
+      } else {
+        $("#predict-adj-blue").text("");
+      }
+
+      if (shown_something)
+        $("#predict").show();
+      else
+        $("#predict").hide();
+    }
+
+    show_predictions();
+
 
     $(".selector").click(function() {
       var item = $(this).siblings( '.select-name' );
@@ -134,7 +172,6 @@
       if(current == clicked){
         item.removeClass(current);
         update_players();
-        predict();
         return;
       }
       
@@ -147,7 +184,6 @@
         item.removeClass('red');
       } 
       update_players();
-      predict();
     });
     
     $(".select-score .score").click(function() {
@@ -158,7 +194,7 @@
       $(this).text(num);
       red_score = Number($('#red-score').text());
       blue_score = Number($('#blue-score').text());
-      predict();
+      show_predictions();
     });
 
     $('.submit').click( function() {
