null? undefined? same thing

--- a/app/templates/new_game.html
+++ b/app/templates/new_game.html
@@ -122,7 +122,7 @@
         pred_red  = updates[10 + ":" + blue_score];  // if red won
         pred_blue = updates[red_score + ":" + 10];   // if blue won
       } else {
-        pred_red = pred_blue = null;
+        pred_red = pred_blue = undefined;
       }
 
       // if _ won, how would their score change
