--- a/app/static/css/stat_tracker.css
+++ b/app/static/css/stat_tracker.css
@@ -153,6 +153,11 @@
     opacity: 0.5;
 }
 
+.leaderboard {
+    padding: 0;
+    list-style-type: none;
+}
+
 .leaderboard-row {
     height: 50px;
     font-size: 40px;
