--- a/app/templates/stats/games.html
+++ b/app/templates/stats/games.html
@@ -1,5 +1,5 @@
 {% extends "content-page.html" %}
-{% block title %}Recent Games{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
   <div class="row title">
