--- a/app/templates/view_player.html
+++ b/app/templates/view_player.html
@@ -52,12 +52,15 @@
   <script type='text/javascript' src='http://www.google.com/jsapi'></script>
   <script type='text/javascript' src='/static/js/date.js'></script>
   <script>
-    var score_history = {{ player.score_history|tojson }};
+    var orig_score_history = {{ player.score_history|tojson }};
+    var score_history = orig_score_history;
+    var overlay = {{ player.overlay|tojson }};
+    var overlay_scale = 0;
     
     google.load('visualization', '1.1', {'packages':['corechart']});
     google.setOnLoadCallback(drawChart);
     window.onresize = drawChart;
-    
+
     function drawChart() {
         var data = new google.visualization.DataTable();
         data.addColumn('number', 'Game Number');
@@ -89,6 +92,16 @@
         };
 
         chart.draw(data, options);
+      }
+
+      setTimeout(add_overlay, 1000);
+      function add_overlay() {
+        overlay_scale += 1;
+        score_history = orig_score_history.slice(0);
+        for (var i = 0; i < score_history.length; i++)
+            score_history[i] += overlay[i] * overlay_scale;
+        drawChart();
+        setTimeout(add_overlay, 1000);
       }
   </script>
 {% endblock %}
