--- a/app/templates/view_player.html
+++ b/app/templates/view_player.html
@@ -94,7 +94,7 @@
         chart.draw(data, options);
       }
 
-      setTimeout(add_overlay, 1000);
+      setTimeout(add_overlay, 5000)
       function add_overlay() {
         overlay_scale += .0001;
         score_history = orig_score_history.slice(0);
